Disable printing of XUL documents.  b=240490  sr=roc  r=bsmedberg  a=chofmann